--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "description": "A small business HTML template built with Bootstrap",
     "scripts": {
         "start": "node server.js"
-      },
+    },
     "keywords": [
         "css",
         "sass",
@@ -31,7 +31,9 @@
     "dependencies": {
         "body-parser": "^1.19.2",
         "bootstrap": "5.1.3",
-        "express": "^4.17.3"
+        "ejs": "^3.1.8",
+        "express": "^4.17.3",
+        "express-ejs-layouts": "^2.5.1"
     },
     "devDependencies": {
         "autoprefixer": "10.3.7",
